<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyTheCarImageActivity">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="175dp"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        android:clickable="true"
        android:contentDescription="@string/img1"
        android:onClick="clickImage1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="175dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:contentDescription="@string/img2"
        android:onClick="clickImage2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image1"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/image3"
        android:layout_width="175dp"
        android:layout_height="150dp"
        android:clickable="true"
        android:contentDescription="@string/img3"
        android:onClick="clickImage3"
        app:layout_constraintBottom_toTopOf="@+id/guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image2"
        app:layout_constraintVertical_bias="0.615"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:enabled="false"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/timer3"
        android:layout_width="158dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/image1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/carName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/carName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>