<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CarMakeActivity">


    <ImageView
        android:id="@+id/car_make_images"
        android:layout_width="364dp"
        android:layout_height="270dp"
        android:contentDescription="@string/car_images"
        app:layout_constraintBottom_toTopOf="@+id/identify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/identify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="172dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/identify"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/car_names"
        android:layout_width="253dp"
        android:layout_height="21dp"
        android:background="#000000"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/car_names"
        app:layout_constraintBottom_toBottomOf="@+id/identify"
        app:layout_constraintEnd_toStartOf="@+id/identify"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/identify"
        app:layout_constraintVertical_bias="0.447" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#21DE29"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/car_make_images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/correct_car_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFC107"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify" />

    <TextView
        android:id="@+id/timer1"
        android:layout_width="107dp"
        android:layout_height="34dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>