<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HintsActivity">

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="76dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_car_name" />

    <ImageView
        android:id="@+id/car_hints_images"
        android:layout_width="314dp"
        android:layout_height="265dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="3dp"
        android:contentDescription="@string/car_images_display_hints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correct_car_name_hints"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/text_car_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="76dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/type_a_letter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_hints_images"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />

    <TextView
        android:id="@+id/label_hints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/car_hints_images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <TextView
        android:id="@+id/correct_car_name_hints"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="100dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/car_hints_images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hint_dashes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_hints_images" />
</androidx.constraintlayout.widget.ConstraintLayout>